--- a/W4D4/Helpers_Layouts_Partials/app/views/cat_rental_requests/new.html.erb
+++ b/W4D4/Helpers_Layouts_Partials/app/views/cat_rental_requests/new.html.erb
@@ -39,3 +39,6 @@
     <input type="submit">
   </form>
 </div></section>
+<% content_for :footer do %>
+  <p>Put in your rental request.</p>
+<% end %>
