--- a/W4D4/Helpers_Layouts_Partials/app/views/cats/index.html.erb
+++ b/W4D4/Helpers_Layouts_Partials/app/views/cats/index.html.erb
@@ -17,3 +17,7 @@
     <% end %>
   </section>
 </section>
+
+<% content_for :footer do %>
+  <p>This is the cats index page. Feel free to look at each cat and see what you like.</p>
+<% end %>
