--- a/W4D4/Helpers_Layouts_Partials/app/views/layouts/application.html.erb
+++ b/W4D4/Helpers_Layouts_Partials/app/views/layouts/application.html.erb
@@ -30,5 +30,9 @@
     <main>
       <%= yield %>
     </main>
+    <footer>
+      <p> This site allows users to browse cats and put in requrests for what cats they would like to rent </p>
+
+       <%= yield :footer %>
   </body>
 </html>
